--- a/styles/stylesrem.css
+++ b/styles/stylesrem.css
@@ -1,19 +1,22 @@
 *   {
     padding: 0%;
     margin: 0%;
-    font-family: 'Lora', serif;
+    /* font-family: 'Lora', serif; */
+    /* font-family: 'Roboto', sans-serif; */
+    font-family: 'Poppins', sans-serif;
 }
 /* HEADER */
 
 header {
     background-image: url(../imagenes/header3.svg);
-    height: 190px;
+    height: 11.875rem;
     background-size: cover;
     position: sticky;
 }
 
 .logo img{
-    width: 130px;
+    /* display: inline-block; */
+    width: 8.125rem;
     /* animation-name: logo;
     animation-duration: 4s;
     animation-timing-function: ease-in;
@@ -28,13 +31,20 @@ header {
     align-items: center;
 }
 /* NAVEGACION */
+
+.navbar{
+    display: flex;
+    justify-content: center;
+    padding: 0.25rem 0.5rem;
+}
+
 .navbar li{
     background-color: #ffddd2;
     display: inline-block;
-    font-size: 22px;
-    padding: 5px 10px;
-    margin: 3px 4px;
-    border-radius: 6px;
+    font-size: 1.375rem;
+    padding: 0.313rem 0.625rem;
+    margin: 0.188rem 0.25rem;
+    border-radius: 0.375rem;
     text-decoration: none;
 } 
 
@@ -46,12 +56,6 @@ header {
 .navbar a:hover{
     text-decoration: none;
     color: grey;
-}
-
-.navbar{
-    display: flex;
-    justify-content: center;
-    padding: 4px 8px;
 }
 
 /* PAGINA INICIO */
@@ -73,7 +77,7 @@ header {
     font-family: 'Parisienne';
     font-size: x-large;
     text-align:center;
-    margin: 30px 100px;
+    margin: 1.875rem 6.25rem;
 }
 
 .imgs{
@@ -86,15 +90,10 @@ header {
 }
 
 .imgs img{
-    width: 220px;
-    height: 220px;
-    border-radius:7px;
-    margin: 40px 0px;
-}
-.imgs img:hover{
-    width: 250px;
-    height: 250px;
-    transition: 500ms;
+    width: 13.75rem;
+    height: 13.75rem;
+    border-radius:0.438rem;
+    margin: 2.5rem 0rem;
 }
 
 body{
@@ -110,20 +109,20 @@ footer {
     background-color: #ffd2c8;
     /* background-image: url(../imagenes/footer.svg); */
     background-size: cover;
-    height: 110px;
+    height: 6.875rem;
 }
 
 .copyright{
-    font-size: 13px;
+    font-size: 0.813rem;
     display: inline-block;
     font-weight: bold;
-    margin: 0px 0px 0px 50px;
+    margin: 0rem 0rem 0rem 3.125rem;
 }
 
 .arriba{
     display: inline-block;
     align-content: end;
-    font-size: 18px;
+    font-size: 1.125rem;
     text-decoration:underline;
     color: black;
 }
@@ -139,14 +138,14 @@ footer {
 
 .links {
     display: inline-block;
-    margin: 0px 50px 0px 0px;
+    margin: 0rem 3.125rem 0rem 0rem;
 }
 
 .links a {
-    margin: 0px 4px;
+    margin: 0rem 0.25rem;
 }
 .links img{
-    width: 32px;
+    width: 2rem;
 }
 
 /* PAGINA PRODUCTOS */
@@ -155,10 +154,10 @@ footer {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 700;
     font-style: italic;
-    margin: 40px 0px;
+    margin: 1rem 0rem;
 }
 
 .gridcontainerproductos{
@@ -170,8 +169,8 @@ footer {
     "fila 2 fila 2 fila 2 fila 2 fila 2"
     "fila 3 fila 3 fila 3 fila 3 fila 3"
     ;
-    grid-column-gap: 2px;
-    grid-row-gap: 2px;
+    grid-column-gap: 0.125rem;
+    grid-row-gap: 0.125rem;
     align-items: center;
     justify-items: center;
 }
@@ -180,44 +179,34 @@ footer {
     flex-direction: column;
     justify-content: center;
     /* background-color: #d6d6d6; */
-    /* border: 1px solid black; */
+    /* border: 0.063 solid black; */
     border-radius: 5%;
-    margin: 8px 8px;
-}
-
-.producto{
-    position: relative;
+    margin: 0.5rem 0.5rem;
 }
 .Fotoproducto{
     display: inline-block;
     border-radius: 5%;
-    width: 200px;
-    height: 200px;
-    margin: 12px 12px;
-}
-
-.Fotoproducto:hover{
-    opacity: 65%;
-    transition: 500ms;
-}
-
-.textimg:hover {
-    opacity: 100%;
-    /* display: block; */
-    position: absolute;
-    font-size: 4vh;
-    color: black; 
+    width: 12.5rem;
+    height: 12.5rem;
+    margin: 0.75rem 0.75rem;
+    transition: 2s;
 }
 
 .textimg{
-    opacity: 0%;
-    /* display: none; */
-    position: absolute;
-    margin: 50% 50%;
+    display: flex;
+    justify-content: center;;
+    margin: 0.125rem 0.125rem;
     font-weight: bolder;
 }
 
-
+/* .contenedor:hover .textimg{
+    position: relative;
+    visibility: visible;
+    display: block;
+    bottom: 0.625rem;
+    right: 44%;
+    color:black;
+} */
 
 
 
@@ -227,11 +216,12 @@ footer {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    margin: 50px 0px 50px 0px;
+    margin: 3.125rem 0rem 3.125rem 0rem;
 }
 
 .sandrayaylen{
-    width: 400px;
+    width: 22rem;
+    height: 22rem;
 }
 
 .sandrayaylen:hover  {
@@ -246,13 +236,13 @@ footer {
 }
 .pnosotros{
     display: inline-block;
-    width: 500px;
+    width: 31.25rem;
 }
 
 .corazon{
     display: flex;
-    width:75px;
-    margin: 20px 20px;
+    width: 4.688rem;
+    margin: 1.25rem 1.25rem;
 }
 
 /* PAGINA HACE TU PEDIDO  */
@@ -265,8 +255,8 @@ footer {
     "fila 2 fila 2 fila 2 fila 2 fila 2"
     "fila 3 fila 3 fila 3 fila 3 fila 3"
     ;
-    grid-column-gap: 2px;
-    grid-row-gap: 2px;
+    grid-column-gap: 0.125rem;
+    grid-row-gap: 0.125rem;
     align-items: center;
     justify-items: center;
 }
@@ -277,24 +267,25 @@ footer {
     align-items: center;
     background-color: #d6d6d6;
     border-radius: 5%;
-    margin: 15px 7px;
-    width: 230px;
+    /* margin: 0.938rem 0.438rem; */
+    margin: 0.9rem 0.5rem;
+    width: 14.375rem;
 }
 
 .checkbox{
     display: inline-block;
-    margin: 4px 7px 10px 0px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
+    margin: 0.25rem 0.5rem 0.625 0rem;
+    box-shadow: 0rem 0.25rem 0.25rem rgba(0, 0, 0, 0.25)
 }
 
 .carrito {    
     background-color: #909090;
-    margin: 9px 0px;
+    margin: 0.563rem 0rem;
     display: flex;
     flex-direction: row;
     align-content: center;
     justify-content: space-between;
-    padding: 0px 3px;
+    padding: 0.2rem 0.188rem;
     border-radius: 5%;
 }
 .confpedido{
@@ -302,15 +293,15 @@ footer {
     justify-content: flex-end;
 }
 .confpedido button{
-    margin: 20px 40px;
-    padding: 2px 3px;
+    margin: 1.25rem 2.5rem;
+    padding: 0.125rem 0.188rem;
 }
 
 .pespeciales {
     display: flex;
     justify-content: center;
     font-size:larger;
-    margin: 30px 0px;
+    margin: 1.875rem 0rem;
 }
 
 .pespeciales a{
@@ -333,15 +324,15 @@ footer {
     flex-direction: column;
     flex-wrap: nowrap;
     justify-content: space-between;
-    margin: 40px 0px;
+    margin: 2.5rem 0rem;
 }
 .form input{
     display: inline-block;
-    border: solid black 2px;
+    border: solid black 0.125rem;
     border-radius: 2%;
-    width: 200px;
-    height: 30px;
-    margin: 0px 30px;
+    width: 12.5rem;
+    height: 1.875rem;
+    margin: 0rem 1.875rem;
 }
 
 .comentarios{
@@ -351,26 +342,26 @@ footer {
 
 .textarea textarea{
     display: inline-block;
-    border: solid black 2px;
-    width: 270px;
-    height: 150px;
-    margin: 40px;
+    border: solid black 0.125rem;
+    width: 16.875rem;
+    height: 9.375rem;
+    margin: 2.5rem;
 }
 
 .botones{
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    margin: 0px 20px;
+    margin: 0rem 1.25rem;
 }
 .botones button{
-    width:130px;
-    margin: 0px 0px 5px 20px;
+    width:8.125rem;
+    margin: 0rem 0rem 0.313rem 1.25rem;
 }
 
 #limpiar {
     display: inline-block;
-    margin-right: 0px 10px;
+    margin-right: 0rem 0.625rem;
 }
 
 .bodycontacto{
@@ -378,29 +369,29 @@ footer {
     flex-direction: row;
     /* flex-wrap: nowrap; */
     justify-content: space-around;
-    margin: 50px 0px;
+    margin: 3.125rem 0rem;
 }
 
 
 /* TAMAÑO TABLET */
 @media screen and (max-width: 768px){
-    #text1{
-        font-size: 25px;
+    .title1 p{
+        font-size: 2.8rem;
         display: inline-block;
     }
-    #text2{
+    .title2 p{
         display: inline-block;
-        font-size: 22px;
+        font-size: 1.6rem;
         font-style: italic;
     } 
     .navbar li{
-        font-size: 20px;
+        font-size: 1.25rem;
     } 
     .header {
         flex-direction: column;
         justify-content: center;
         align-content: space-evenly;
-        height: 160px;
+        height: 10rem;
     }
     .footer {
         flex-direction: column;
@@ -408,6 +399,8 @@ footer {
     }
     .navbar {
         flex-direction: column;
+        align-items: stretch;
+        
     }
     .navbar li{
         display:flex;
@@ -425,34 +418,34 @@ footer {
         align-items: center;
     }
     .form{
-        margin: 30px 0px 20px 0px;
+        margin: 1.875rem 0rem 1.25rem 0rem;
     }
     .form input{
-        width: 270px;
-        margin: 10px;
+        width: 16.875rem;
+        margin: 0.625rem;
     }
     .botones{
         flex-direction: column;
         align-items: center;
     }
     .textarea{
-        margin: 0px;
+        margin: 0rem;
     }
     .textarea textarea{
-        margin: 20px 20px;
+        margin: 1.25rem 1.25rem;
     }
     .comentarios{
-        margin: 0px;
+        margin: 0rem;
     }
     .botones button{
-        width: 270px;
-        margin: 5px 0px;
+        width: 16.875rem;
+        margin: 0.313rem 0rem;
     }
     .imgs{
-        margin-top: 20px;
+        margin-top: 1.25rem;
     }
     .imgs img {
-        margin: 20px 40px;
+        margin: 1.25rem 2.5rem;
     }
     .gridcontainerproductos{
         display: grid;
@@ -465,10 +458,11 @@ footer {
         "fila 4 fila 4 fila 4"
         "fila 5 fila 5 fila 5"
         ;
-        grid-column-gap: 2px;
-        grid-row-gap: 2px;
+        grid-column-gap: 0.125rem;
+        grid-row-gap: 0.125rem;
         align-items: center;
         justify-items: center;
+        margin-bottom: 1rem;
     }
     .gridcontainerhtp{
         display: grid;
@@ -481,8 +475,8 @@ footer {
         "fila 4 fila 4 fila 4"
         "fila 5 fila 5 fila 5"
         ;
-        grid-column-gap: 2px;
-        grid-row-gap: 2px;
+        grid-column-gap: 0.125rem;
+        grid-row-gap: 0.125rem;
         align-items: center;
         justify-items: center;
     }
@@ -491,10 +485,10 @@ footer {
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin: 30px 0px 30px 0px;
+        margin: 1.875rem 0rem 1.875rem 0rem;
     }
     .sandrayaylen{
-        margin: 20px 0px 50px;
+        margin: 1.25rem 0rem 3.125rem;
     }
     .pnosotros{
         text-align: justify;
@@ -505,66 +499,87 @@ footer {
 @media screen and (max-width: 426px){
     /* CODEAR ACA LO QUE SE MODIFICARIA A PARTIR DE ESTE TAMAÑO(CUANDO LLEGA A 1200 QUE PASE LO SIGUIENTE:) */
     .logo img{
-        width: 80px;
-        height: 80px;
+        margin: 0.5rem 0rem 0rem 0rem;
+        width: 5rem;
+        height: 5rem;
     }
     .links {
-        margin: 10px 10px;
+        margin: 0.625rem 0.625rem;
     }
     .links img{
-        width: 20px;
+        width: 1.25rem;
     }
     .copyright{
-        font-size: 10px;
-        margin: 0px 0px 0px 10px;
+        font-size: 0.625rem;
+        margin: 0rem 0rem 0rem 0.625rem;
     }
     .carrito {
-        margin: 3px 0px;
+        margin: 0.188rem 0rem;
     }
     .Fotoproducto {
         border-radius: 3%;
-        width: 160px;
-        height: 160px;
-        margin: 8px 8px;
+        width: 10.5rem;
+        height: 10.5rem;
+        /* margin: 0.5rem 0.5rem; */
         transition: 2s;
     }
-        .gridcontainerhtp .producto{
+    
+    .gridcontainerhtp .producto{
         display: flex;
         flex-direction: column;
         align-items: center;
         background-color: #d6d6d6;
         border-radius: 5%;
-        margin: 15px 7px;
-        width: 190px;
-        height: 210px;
+        margin: 0.938rem 0.438rem;
+        width: 11.875rem;
+        height: 16rem;
     }
-    #text1{
-        font-size: 16px;
+    .gridcontainerhtp .producto p{
+        margin: 0rem;
+    }
+    .gridcontainerhtp .producto{
+        align-content: center;
+    }
+    .title1{
+        font-size: 0rem;
         display: inline-block;
     }
+    .title2{
+        font-size: 0rem;
+        display: inline-block;
+    } 
+    .title1 p{
+        font-size: 2rem;
+        display: inline-block;
+        margin: 0rem;
+    }
+    .title2 p{
+        display: inline-block;
+        margin: 0rem;
+        font-size: 1.2rem;
+        font-style: italic;
+    } 
+
     .arriba{
         display: inline-block;
         align-content: end;
-        font-size: 13px;
+        font-size: 0.813rem;
         color: black;
     }
-    #text2{
-        display: inline-block;
-        font-size: 13px;
-        font-style: italic;
-    } 
+    
     .mapa{
-        margin: 10px 10px;
+        margin: 0.625rem 0.625rem;
     }
     .parrafo p {
-        margin: 20px 15px;
+        margin: 1.25rem 0.938rem;
+        font-size: 1.4rem;
     }
     .header {
         flex-direction: column;
         flex-wrap: nowrap;
         justify-content: center;
         align-content: space-evenly;
-        height: 160;
+        height: 10rem;
     }
     .footer {
         flex-direction: column;
@@ -572,16 +587,21 @@ footer {
     }
     .navbar {
         flex-direction: column;
+        align-items: stretch;
     }
     .navbar li{
         display:flex;
         flex-direction: column;
         justify-content: center;
-        align-items: center;
+        /* align-items: stretch; */
     }
     .pespeciales{
         align-items: center;
         text-align: center;
+    }
+
+    .textycorazon{
+        margin: 0.5rem 1rem;
     }
     .bodycontacto{
         display: flex;
@@ -589,54 +609,54 @@ footer {
         align-items: center;
     }
     .form{
-        margin: 30px 0px 20px 0px;
+        margin: 1.875rem 0rem 1.25rem 0rem;
     }
     .form input{
-        width: 270px;
-        margin: 10px;
+        width: 16.875rem;
+        margin: 0.625rem;
     }
     .botones{
         flex-direction: column;
         align-items: center;
     }
     .textarea{
-        margin: 0px;
+        margin: 0rem;
     }
     .textarea textarea{
-        margin: 20px 20px;
+        margin: 1.25rem 1.25rem;
     }
     .comentarios{
-        margin: 0px;
+        margin: 0rem;
     }
     .botones button{
-        width: 270px;
-        margin: 5px 0px;
+        width: 16.875rem;
+        margin: 0.313rem 0rem;
     }
     .imgs{
-        margin-top: 20px;
+        margin-top: 1.25rem;
     }
     
     .imgs img {
-        width: 150px;
-        height: 150px;
-        margin: 10px 10px;
+        width: 9.375rem;
+        height: 9.375rem;
+        margin: 0.625rem 0.625rem;
     }
     .gridcontainerproductos{
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(6, 1fr);
         grid-template-areas:
-        "fila 1 fila 1 "
-        "fila 2 fila 2 "
-        "fila 3 fila 3 "
-        "fila 4 fila 4 "
-        "fila 5 fila 5 "
-        "fila 5 fila 5 "
+        "fila 1 fila 1"
+        "fila 2 fila 2"
+        "fila 3 fila 3"
+        "fila 4 fila 4"
+        "fila 5 fila 5"
+        "fila 5 fila 5"
         ;
-        grid-column-gap: 2px;
-        grid-row-gap: 2px;
-        align-items: center;
-        justify-items: center;
+        grid-column-gap: 0.125rem;
+        grid-row-gap: 0.125rem;
+        align-items: stretch;
+        justify-items: stretch;
     }
 
     .gridcontainerhtp{
@@ -651,8 +671,8 @@ footer {
         "fila 5 fila 5 "
         "fila 6 fila 6 "
         ;
-        grid-column-gap: 2px;
-        grid-row-gap: 2px;
+        grid-column-gap: 0.125rem;
+        grid-row-gap: 0.125rem;
         align-items: center;
         justify-items: center;
     }
@@ -660,14 +680,14 @@ footer {
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin: 30px 0px 30px 0px;
+        margin: 1.875rem 0rem 1.875rem 0rem;
     }
     .sandrayaylen{
-        margin: 20px 0px 50px;
+        margin: 1.25rem 0rem 3.125rem;
     }
     .pnosotros{
         text-align: justify;
-        margin: 5px 10px;
+        margin: 0.313rem 0.625rem;
         width: auto;
     }
 }
