--- a/styles/stylesrem.css
+++ b/styles/stylesrem.css
@@ -162,18 +162,24 @@ footer {
 
 .gridcontainerproductos{
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(8, 1fr);
     grid-template-areas:
-    "fila 1 fila 1 fila 1 fila 1 fila 1"
-    "fila 2 fila 2 fila 2 fila 2 fila 2"
-    "fila 3 fila 3 fila 3 fila 3 fila 3"
+    "fila 1 fila 1"
+    "fila 2 fila 2"
+    "fila 3 fila 3"
+    "fila 4 fila 4"
+    "fila 5 fila 5"
+    "fila 6 fila 6"
+    "fila 7 fila 7"
+    "fila 8 fila 8"
     ;
     grid-column-gap: 0.125rem;
     grid-row-gap: 0.125rem;
     align-items: center;
     justify-items: center;
 }
+
 .contenedor{
     display: flex;
     flex-direction: column;
@@ -185,9 +191,9 @@ footer {
 }
 .Fotoproducto{
     display: inline-block;
-    border-radius: 5%;
-    width: 12.5rem;
-    height: 12.5rem;
+    /* border-radius: 5%; */
+    width: 12rem;
+    height: 12rem;
     margin: 0.75rem 0.75rem;
     transition: 2s;
 }
@@ -233,6 +239,8 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: justify;
+    margin: 0rem 2rem;
 }
 .pnosotros{
     display: inline-block;
@@ -248,12 +256,14 @@ footer {
 /* PAGINA HACE TU PEDIDO  */
 .gridcontainerhtp{
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(5, 1fr);
     grid-template-areas:
-    "fila 1 fila 1 fila 1 fila 1 fila 1"
-    "fila 2 fila 2 fila 2 fila 2 fila 2"
-    "fila 3 fila 3 fila 3 fila 3 fila 3"
+    "fila 1 fila 1 fila 1"
+    "fila 2 fila 2 fila 2"
+    "fila 3 fila 3 fila 3"
+    "fila 4 fila 4 fila 4"
+    "fila 5 fila 5 fila 5"
     ;
     grid-column-gap: 0.125rem;
     grid-row-gap: 0.125rem;
@@ -274,19 +284,28 @@ footer {
 
 .checkbox{
     display: inline-block;
-    margin: 0.25rem 0.5rem 0.625 0rem;
+    margin: 0.25rem 0.25rem;
+    justify-items: center;
+    align-items: center;
     box-shadow: 0rem 0.25rem 0.25rem rgba(0, 0, 0, 0.25)
 }
 
+.cardshtp{
+    margin: 1rem 1rem;
+}
 .carrito {    
-    background-color: #909090;
-    margin: 0.563rem 0rem;
+    background-color: #e9e9e9;
+    padding: 0.2rem 0.3rem;
     display: flex;
+    width: fit-content;
     flex-direction: row;
     align-content: center;
-    justify-content: space-between;
-    padding: 0.2rem 0.188rem;
-    border-radius: 5%;
+    justify-content: flex-start;
+    border-radius: 3%;
+}
+
+.carrito p{
+    margin: 0rem;
 }
 .confpedido{
     display: flex;
@@ -316,15 +335,18 @@ footer {
 /* PAGINA CONTACTO */
 
 .mapa{
-    display: inline-block;
+    display: flex;
+    justify-content: center;
+    margin: 0.5rem
 }
 
 .form{
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
-    justify-content: space-between;
-    margin: 2.5rem 0rem;
+    justify-content: center;
+    align-items: center;
+    margin: 1.5rem 0rem;
 }
 .form input{
     display: inline-block;
@@ -332,7 +354,7 @@ footer {
     border-radius: 2%;
     width: 12.5rem;
     height: 1.875rem;
-    margin: 0rem 1.875rem;
+    margin: 0.5rem 1rem;
 }
 
 .comentarios{
@@ -340,12 +362,17 @@ footer {
     flex-direction: column;
 }
 
-.textarea textarea{
-    display: inline-block;
+.texta {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.texta textarea{
+    display: flex;
     border: solid black 0.125rem;
-    width: 16.875rem;
-    height: 9.375rem;
-    margin: 2.5rem;
+    width: 25rem;
+    height: 10rem;
+    margin: 1rem;
 }
 
 .botones{
@@ -355,8 +382,8 @@ footer {
     margin: 0rem 1.25rem;
 }
 .botones button{
-    width:8.125rem;
-    margin: 0rem 0rem 0.313rem 1.25rem;
+    width: 9rem;
+    margin: 0.3rem 1.3rem;
 }
 
 #limpiar {
@@ -367,9 +394,9 @@ footer {
 .bodycontacto{
     display: flex;
     flex-direction: row;
-    /* flex-wrap: nowrap; */
+    flex-wrap: nowrap;
     justify-content: space-around;
-    margin: 3.125rem 0rem;
+    margin: 2.5rem 0rem;
 }
 
 
@@ -421,25 +448,27 @@ footer {
         margin: 1.875rem 0rem 1.25rem 0rem;
     }
     .form input{
-        width: 16.875rem;
-        margin: 0.625rem;
+        width: 17rem;
+        margin: 0.6rem;
     }
     .botones{
+        display: flex;
         flex-direction: column;
-        align-items: center;
+        align-items: flex-start;
     }
-    .textarea{
+    .texta{
         margin: 0rem;
     }
-    .textarea textarea{
-        margin: 1.25rem 1.25rem;
+    .texta textarea{
+        width: 17rem;
+        margin: 1rem 1rem;
     }
     .comentarios{
         margin: 0rem;
     }
     .botones button{
-        width: 16.875rem;
-        margin: 0.313rem 0rem;
+        width: fit-content;
+        margin: 0.3rem 0rem;
     }
     .imgs{
         margin-top: 1.25rem;
@@ -449,15 +478,18 @@ footer {
     }
     .gridcontainerproductos{
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(5, 1fr);
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(8, 1fr);
         grid-template-areas:
-        "fila 1 fila 1 fila 1"
-        "fila 2 fila 2 fila 2"
-        "fila 3 fila 3 fila 3"
-        "fila 4 fila 4 fila 4"
-        "fila 5 fila 5 fila 5"
-        ;
+        "fila 1 fila 1"
+        "fila 2 fila 2"
+        "fila 3 fila 3"
+        "fila 4 fila 4"
+        "fila 5 fila 5"
+        "fila 6 fila 6"
+        "fila 7 fila 7"
+        "fila 8 fila 8"
+    ;
         grid-column-gap: 0.125rem;
         grid-row-gap: 0.125rem;
         align-items: center;
@@ -466,21 +498,26 @@ footer {
     }
     .gridcontainerhtp{
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(5, 1fr);
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(8, 1fr);
         grid-template-areas:
-        "fila 1 fila 1 fila 1"
-        "fila 2 fila 2 fila 2"
-        "fila 3 fila 3 fila 3"
-        "fila 4 fila 4 fila 4"
-        "fila 5 fila 5 fila 5"
+        "fila 1 fila 1"
+        "fila 2 fila 2"
+        "fila 3 fila 3"
+        "fila 4 fila 4"
+        "fila 5 fila 5"
+        "fila 6 fila 6"
+        "fila 7 fila 7"
+        "fila 8 fila 8"
         ;
         grid-column-gap: 0.125rem;
         grid-row-gap: 0.125rem;
         align-items: center;
         justify-items: center;
     }
-
+    .textycorazon{
+        margin: 0rem 0rem;
+    }
     .mainnosotros{
         display: flex;
         flex-direction: column;
@@ -502,6 +539,9 @@ footer {
         margin: 0.5rem 0rem 0rem 0rem;
         width: 5rem;
         height: 5rem;
+    }
+    .textycorazon{
+        margin: 0rem 0rem;
     }
     .links {
         margin: 0.625rem 0.625rem;
@@ -599,10 +639,6 @@ footer {
         align-items: center;
         text-align: center;
     }
-
-    .textycorazon{
-        margin: 0.5rem 1rem;
-    }
     .bodycontacto{
         display: flex;
         flex-direction: column;
@@ -619,10 +655,10 @@ footer {
         flex-direction: column;
         align-items: center;
     }
-    .textarea{
+    .texta{
         margin: 0rem;
     }
-    .textarea textarea{
+    .texta textarea{
         margin: 1.25rem 1.25rem;
     }
     .comentarios{
@@ -643,15 +679,17 @@ footer {
     }
     .gridcontainerproductos{
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(6, 1fr);
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(16, 1fr);
         grid-template-areas:
         "fila 1 fila 1"
         "fila 2 fila 2"
         "fila 3 fila 3"
         "fila 4 fila 4"
         "fila 5 fila 5"
-        "fila 5 fila 5"
+        "fila 6 fila 6"
+        "fila 7 fila 7"
+        "fila 8 fila 8"
         ;
         grid-column-gap: 0.125rem;
         grid-row-gap: 0.125rem;
@@ -683,8 +721,9 @@ footer {
         margin: 1.875rem 0rem 1.875rem 0rem;
     }
     .sandrayaylen{
-        margin: 1.25rem 0rem 3.125rem;
+        margin: 1rem 2rem;
     }
+
     .pnosotros{
         text-align: justify;
         margin: 0.313rem 0.625rem;
