--- a/styles/stylesrem.css
+++ b/styles/stylesrem.css
@@ -294,7 +294,7 @@ footer {
     margin: 1rem 1rem;
 }
 .carrito {    
-    background-color: #e9e9e9;
+    background-color: #ffddd2;
     padding: 0.2rem 0.3rem;
     display: flex;
     width: fit-content;
@@ -313,7 +313,7 @@ footer {
 }
 .confpedido button{
     margin: 1.25rem 2.5rem;
-    padding: 0.125rem 0.188rem;
+    padding: 0.15rem 0.4rem;
 }
 
 .pespeciales {
@@ -380,10 +380,24 @@ footer {
     flex-direction: column;
     justify-content: flex-end;
     margin: 0rem 1.25rem;
+    border-radius: 5%!important;
 }
-.botones button{
-    width: 9rem;
-    margin: 0.3rem 1.3rem;
+
+.boton__element{
+    border-style: none;
+    background-color: #ffddd2;
+    display: inline-block;
+    font-size: 1rem;
+    width: fit-content;
+    padding: 0.1rem 1rem;
+    margin: 0.188rem 0.25rem;
+    border-radius: 0.375rem;
+    text-decoration: none;
+}
+
+.boton__element:hover {
+    text-decoration: none;
+    color: grey;
 }
 
 #limpiar {
