--- a/styles/stylesrem.css
+++ b/styles/stylesrem.css
@@ -293,6 +293,9 @@ footer {
 .cardshtp{
     margin: 1rem 1rem;
 }
+.cardsproductos{
+    margin: 1rem 1rem;
+}
 .carrito {    
     background-color: #ffddd2;
     padding: 0.2rem 0.3rem;
