Cambio background-color footer 5/4 11:40am

--- a/styles/stylesrem.css
+++ b/styles/stylesrem.css
@@ -109,7 +109,7 @@ footer {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    background-color: #ffd2c8;
+    background-color: #ff937a;
     /* background-image: url(../imagenes/footer.svg); */
     background-size: cover;
     height: 6.875rem;
