--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,11 +1,204 @@
+@import "_variables.scss";
+@import "_mixings.scss";
 
-.hola {
-    color: red;
-    a{
-        font-color: rgb(66, 126, 180);
+
+* {
+    padding: 0%;
+    margin: 0%;
+
+    /* font-family: 'Lora', serif;
+    font-family: 'Roboto', sans-serif;  */
+    font-family: 'Poppins', sans-serif;
+}
+
+.container-fluid {
+    padding: 0%;
+}
+
+/* HEADER */
+
+header {
+    @include header;
+}
+
+.logo img {
+    /* display: inline-block; */
+    width: 8.125rem;
+
+    /* animation-name: logo;
+    animation-duration: 4s;
+    animation-timing-function: ease-in;
+    animation-iteration-count: infinite; */
+}
+
+.header {
+    display: flex;
+    flex-wrap: wrap;
+
+    /* TAMBIEN SE PUEDE HACER CON flex-flow: row wrap;*/
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.title1 {
+    font-size: 3.6rem;
+    display: inline-block;
+}
+
+.title2 {
+    display: inline-block;
+    font-size: 1.6rem;
+    font-style: italic;
+}
+
+/* NAVEGACION */
+
+.navbar {
+    display: flex;
+    justify-content: center;
+    padding: 0.25rem 0.5rem;
+
+    li {
+        background-color: $backcolor;
+        display: inline-block;
+        font-size: 1.375rem;
+        padding: 0.313rem 0.625rem;
+        margin: 0.188rem 0.25rem;
+        border-radius: 0.375rem;
+        text-decoration: none;
+    }
+
+    a {
+        text-decoration: none;
+        color: black;
+
+        &:hover {
+            text-decoration: none;
+            color: grey;
+        }
     }
 }
 
-.hola img{
-    background-color: aliceblue;
+/* PAGINA NOSOTROS */
+
+.mainnosotros {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin: 3.125rem 0rem 3.125rem 0rem;
 }
+
+.sandrayaylen {
+    width: 22rem;
+    height: 22rem;
+
+    &:hover {
+        transition: 300ms;
+        box-shadow: 0.3rem 0.3rem 0.7rem #00000063;
+    }
+}
+
+.textycorazon {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: justify;
+    margin: 0rem 2rem;
+}
+
+.pnosotros {
+    display: inline-block;
+    width: 31.25rem;
+}
+
+.corazon {
+    display: flex;
+    width: 4.688rem;
+    margin: 1.25rem 1.25rem;
+}
+
+/* FOOTER */
+
+footer {
+    position: static;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #ff937a;
+    background-size: cover;
+    height: 6.875rem;
+}
+
+.copyright {
+    font-size: 0.813rem;
+    display: inline-block;
+    font-weight: bold;
+    margin: 0rem 0rem 0rem 3.125rem;
+}
+
+.arriba {
+    display: inline-block;
+    align-content: end;
+    font-size: 1.125rem;
+    text-decoration: underline;
+    color: black;
+
+    a {
+        text-decoration: none;
+        color: black;
+
+        &:hover {
+            text-decoration: none;
+            color: grey;
+        }
+    }
+}
+
+.links {
+    display: inline-block;
+    margin: 0rem 3.125rem 0rem 0rem;
+
+    a {
+        margin: 0rem 0.25rem;
+    }
+
+    img {
+        width: 2rem;
+    }
+}
+
+
+
+
+
+
+// // EJEMPLOS
+// .hola {
+//     color: red;
+
+//     a {
+//         color: rgb(66, 126, 180);
+//     }
+// }
+
+// .hola img {
+//     background-color: aliceblue;
+// }
+
+// /* BUCLES */
+
+// @for $i from 1 through 5 {
+//     .item-#{$i} {
+//         width: 2px * $i;
+//     }
+// }
+
+
+// /* EACH */
+// @each $color in blue,yellow,black {
+//     .#{$color} {
+//         color:#{$color};
+//     }
+// }
