--- a/scss/_mixings.scss
+++ b/scss/_mixings.scss
@@ -3,6 +3,11 @@
     height: 11.875rem;
     background-size: cover;
     position: sticky;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
 }
 
 @mixin footer{
