--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -30,14 +30,16 @@ header {
     animation-iteration-count: infinite; */
 }
 
-.header {
+.productosp {
     display: flex;
-    flex-wrap: wrap;
     flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
+    font-size: 1.5rem;
+    font-weight: 700;
+    font-style: italic;
+    margin: 1rem 0rem;
 }
-
 .title1 {
     font-size: 3.6rem;
     display: inline-block;
