--- a/scss/_mixings.scss
+++ b/scss/_mixings.scss
@@ -8,15 +8,97 @@
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
+    .logo img {
+        /* display: inline-block; */
+        width: 8.125rem;
+        /* animation-name: logo;
+        animation-duration: 4s;
+        animation-timing-function: ease-in;
+        animation-iteration-count: infinite; */
+    }
+    .title1 {
+        font-size: 3.6rem;
+        display: inline-block;
+    }
+    .title2 {
+        display: inline-block;
+        font-size: 1.6rem;
+        font-style: italic;
+    }
+}
+
+@mixin navbar{
+    display: flex;
+    justify-content: center;
+    padding: 0.25rem 0.5rem;
+    li {
+        background-color: $backcolor;
+        display: inline-block;
+        font-size: 1.375rem;
+        padding: 0.313rem 0.625rem;
+        margin: 0.188rem 0.25rem;
+        border-radius: 0.375rem;
+        text-decoration: none;
+    }
+    a {
+        text-decoration: none;
+        color: black;
+        &:hover {
+            text-decoration: none;
+            color: grey;
+        }
+    }
+}
+
+@mixin encabezado{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    font-size: 1.5rem;
+    font-weight: 700;
+    font-style: italic;
+    margin: 1rem 0rem;
 }
 
 @mixin footer{
-        position: static;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        background-color: #ff937a;
-        background-size: cover;
-        height: 6.875rem;
+    position: static;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #ff937a;
+    background-size: cover;
+    height: 6.875rem;
+    .copyright {
+        font-size: 0.813rem;
+        display: inline-block;
+        font-weight: bold;
+        margin: 0rem 0rem 0rem 3.125rem;
+    }
+    .arriba {
+        display: inline-block;
+        align-content: end;
+        font-size: 1.125rem;
+        text-decoration: underline;
+        color: black;
+        a {
+            text-decoration: none;
+            color: black;
+            &:hover {
+                text-decoration: none;
+                color: grey;
+            }
+        }
+    }
+    .links {
+        display: inline-block;
+        margin: 0rem 3.125rem 0rem 0rem;
+        a {
+            margin: 0rem 0.25rem;
+        }
+        img {
+            width: 2rem;
+        }
+    }
 }
