--- a/styles/styles-from-sass.css
+++ b/styles/styles-from-sass.css
@@ -20,13 +20,6 @@
   .status-bar-button:hover {
     background-color: blue; }
 
-* {
-  padding: 0%;
-  margin: 0%;
-  /* font-family: 'Lora', serif;
-    font-family: 'Roboto', sans-serif; */
-  font-family: 'Poppins', sans-serif; }
-
 .container-fluid {
   padding: 0%; }
 
@@ -41,33 +34,20 @@ header {
   flex-direction: row;
   justify-content: space-around;
   align-items: center; }
-
-.logo img {
-  /* display: inline-block; */
-  width: 8.125rem;
-  /* animation-name: logo;
-    animation-duration: 4s;
-    animation-timing-function: ease-in;
-    animation-iteration-count: infinite; */ }
-
-.productosp {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  font-size: 1.5rem;
-  font-weight: 700;
-  font-style: italic;
-  margin: 1rem 0rem; }
-
-.title1 {
-  font-size: 3.6rem;
-  display: inline-block; }
-
-.title2 {
-  display: inline-block;
-  font-size: 1.6rem;
-  font-style: italic; }
+  header .logo img {
+    /* display: inline-block; */
+    width: 8.125rem;
+    /* animation-name: logo;
+        animation-duration: 4s;
+        animation-timing-function: ease-in;
+        animation-iteration-count: infinite; */ }
+  header .title1 {
+    font-size: 3.6rem;
+    display: inline-block; }
+  header .title2 {
+    display: inline-block;
+    font-size: 1.6rem;
+    font-style: italic; }
 
 /* NAVEGACION */
 .navbar {
@@ -89,7 +69,18 @@ header {
       text-decoration: none;
       color: grey; }
 
-/* PAGINA NOSOTROS */
+/* ENCABEZADO */
+.productosp {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  font-size: 1.5rem;
+  font-weight: 700;
+  font-style: italic;
+  margin: 1rem 0rem; }
+
+/* CUERPO PAGINA NOSOTROS */
 .mainnosotros {
   display: flex;
   flex-direction: row;
@@ -119,44 +110,6 @@ header {
   width: 4.688rem;
   margin: 1.25rem 1.25rem; }
 
-/* FOOTER */
-footer {
-  position: static;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #ff937a;
-  background-size: cover;
-  height: 6.875rem; }
-
-.copyright {
-  font-size: 0.813rem;
-  display: inline-block;
-  font-weight: bold;
-  margin: 0rem 0rem 0rem 3.125rem; }
-
-.arriba {
-  display: inline-block;
-  align-content: end;
-  font-size: 1.125rem;
-  text-decoration: underline;
-  color: black; }
-  .arriba a {
-    text-decoration: none;
-    color: black; }
-    .arriba a:hover {
-      text-decoration: none;
-      color: grey; }
-
-.links {
-  display: inline-block;
-  margin: 0rem 3.125rem 0rem 0rem; }
-  .links a {
-    margin: 0rem 0.25rem; }
-  .links img {
-    width: 2rem; }
-
 .img_nosotros {
   display: flex;
   flex-wrap: wrap;
@@ -172,6 +125,156 @@ footer {
     background-color: #cc5dcc; }
   .img_nosotros .img_nosotros_box4 {
     background-color: #cca95d; }
+
+/* FOOTER */
+footer {
+  position: static;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #ff937a;
+  background-size: cover;
+  height: 6.875rem; }
+  footer .copyright {
+    font-size: 0.813rem;
+    display: inline-block;
+    font-weight: bold;
+    margin: 0rem 0rem 0rem 3.125rem; }
+  footer .arriba {
+    display: inline-block;
+    align-content: end;
+    font-size: 1.125rem;
+    text-decoration: underline;
+    color: black; }
+    footer .arriba a {
+      text-decoration: none;
+      color: black; }
+      footer .arriba a:hover {
+        text-decoration: none;
+        color: grey; }
+  footer .links {
+    display: inline-block;
+    margin: 0rem 3.125rem 0rem 0rem; }
+    footer .links a {
+      margin: 0rem 0.25rem; }
+    footer .links img {
+      width: 2rem; }
+
+.container-fluid {
+  padding: 0%; }
+
+/* HEADER */
+header {
+  background-image: url(../imagenes/header3.svg);
+  height: 11.875rem;
+  background-size: cover;
+  position: sticky;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center; }
+  header .logo img {
+    /* display: inline-block; */
+    width: 8.125rem;
+    /* animation-name: logo;
+        animation-duration: 4s;
+        animation-timing-function: ease-in;
+        animation-iteration-count: infinite; */ }
+  header .title1 {
+    font-size: 3.6rem;
+    display: inline-block; }
+  header .title2 {
+    display: inline-block;
+    font-size: 1.6rem;
+    font-style: italic; }
+
+/* NAVEGACION */
+.navbar {
+  display: flex;
+  justify-content: center;
+  padding: 0.25rem 0.5rem; }
+  .navbar li {
+    background-color: #ffddd2;
+    display: inline-block;
+    font-size: 1.375rem;
+    padding: 0.313rem 0.625rem;
+    margin: 0.188rem 0.25rem;
+    border-radius: 0.375rem;
+    text-decoration: none; }
+  .navbar a {
+    text-decoration: none;
+    color: black; }
+    .navbar a:hover {
+      text-decoration: none;
+      color: grey; }
+
+/* CUERPO PAGINA INDEX */
+.parrafo p {
+  display: flex;
+  justify-content: center;
+  font-family: 'Parisienne';
+  font-size: x-large;
+  text-align: center;
+  margin: 1.875rem 6.25rem; }
+
+.imgs {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: baseline; }
+  .imgs img {
+    width: 13.75rem;
+    height: 13.75rem;
+    border-radius: 0.438rem;
+    margin: 2.5rem 0rem; }
+
+body {
+  background-image: url(../imagenes/background.png); }
+
+/* FOOTER */
+footer {
+  position: static;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #ff937a;
+  background-size: cover;
+  height: 6.875rem; }
+  footer .copyright {
+    font-size: 0.813rem;
+    display: inline-block;
+    font-weight: bold;
+    margin: 0rem 0rem 0rem 3.125rem; }
+  footer .arriba {
+    display: inline-block;
+    align-content: end;
+    font-size: 1.125rem;
+    text-decoration: underline;
+    color: black; }
+    footer .arriba a {
+      text-decoration: none;
+      color: black; }
+      footer .arriba a:hover {
+        text-decoration: none;
+        color: grey; }
+  footer .links {
+    display: inline-block;
+    margin: 0rem 3.125rem 0rem 0rem; }
+    footer .links a {
+      margin: 0rem 0.25rem; }
+    footer .links img {
+      width: 2rem; }
+
+* {
+  padding: 0%;
+  margin: 0%;
+  /* font-family: 'Lora', serif;
+    font-family: 'Roboto', sans-serif; */
+  font-family: 'Poppins', sans-serif; }
 
 /* TAMAÑO TABLET */
 @media screen and (max-width: 768px) {
