sass agregado a todo el sitio. Falta agregar menu hamburguesa de bootstrap

--- a/scss/_maps.scss
+++ b/scss/_maps.scss
@@ -1,9 +1,8 @@
-$colores: (
-        back: #ff937a,
+$colores: (back: #ff937a,
         header: #ac513d,
         box1: #5dcc89,
         box2: #a0cc5d,
         box3: #cc5dcc,
         box4: #cca95d,
 
-); 
+);
