--- a/scss/_extend.scss
+++ b/scss/_extend.scss
@@ -1,10 +1,21 @@
 %img-box {
-    width: 13.75rem;
-        height: 13.75rem;
-        padding: 1rem;
-        background-color: map-get($colores , back);
+	width: 13.75rem;
+	height: 13.75rem;
+	padding: 1rem;
+	background-color: map-get($colores, back);
 }
 
+%hoverencabezado {
+	a {
+		text-decoration: none;
+		color: black;
+
+		&:hover {
+			text-decoration: underline;
+			color: #0d6efd;
+		}
+	}
+}
 
 %button-format {
 	padding: 10px 20px;
