--- a/scss/_pag-index.scss
+++ b/scss/_pag-index.scss
@@ -4,7 +4,7 @@
 
 /* HEADER */
 header {
-    @include header;
+    @include headeryformat;
 }
 
 /* NAVEGACION */
@@ -21,12 +21,14 @@ header {
     text-align: center;
     margin: 1.875rem 6.25rem;
 }
+
 .imgs {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: baseline;
+
     img {
         width: 13.75rem;
         height: 13.75rem;
@@ -34,6 +36,7 @@ header {
         margin: 2.5rem 0rem;
     }
 }
+
 body {
     background-image: url(../imagenes/background.png);
 }
