--- a/scss/styles-main.scss
+++ b/scss/styles-main.scss
@@ -2,18 +2,15 @@
 @import "_mixings.scss";
 @import "_maps.scss";
 @import "_extend.scss";
-@import "_pag-nosotros.scss";
 @import "_pag-index.scss";
+@import "_pag-productos.scss";
+@import "_pag-nosotros.scss";
+@import "_pag-hacetupedido.scss";
+@import "_pag-contacto.scss";
 
 
-* {
-    padding: 0%;
-    margin: 0%;
-    /* font-family: 'Lora', serif;
-    font-family: 'Roboto', sans-serif; */
-    font-family: 'Poppins', sans-serif;
-}
-
+// MEDIAQUERIES ULTIMAS
+@import "_mediaqueries.scss";
 
 // // EJEMPLOS
 // .hola {
@@ -39,5 +36,3 @@
 //         color:#{$color};
 //     }
 // }
-
-@import "_mediaqueries.scss";
