--- a/styles/styles-from-sass.css
+++ b/styles/styles-from-sass.css
@@ -5,6 +5,13 @@
   padding: 1rem;
   background-color: #ff937a; }
 
+.productosp a {
+  text-decoration: none;
+  color: black; }
+  .productosp a:hover {
+    text-decoration: underline;
+    color: #0d6efd; }
+
 .toolbar-button, .status-bar-button {
   padding: 10px 20px;
   border-radius: 15px;
@@ -34,6 +41,126 @@ header {
   flex-direction: row;
   justify-content: space-around;
   align-items: center; }
+  header * {
+    padding: 0%;
+    margin: 0%;
+    /* font-family: 'Lora', serif;
+        font-family: 'Roboto', sans-serif; */
+    font-family: 'Poppins', sans-serif; }
+  header .logo img {
+    /* display: inline-block; */
+    width: 8.125rem;
+    /* animation-name: logo;
+        animation-duration: 4s;
+        animation-timing-function: ease-in;
+        animation-iteration-count: infinite; */ }
+  header .title1 {
+    font-size: 3.6rem;
+    display: inline-block; }
+  header .title2 {
+    display: inline-block;
+    font-size: 1.6rem;
+    font-style: italic; }
+
+/* NAVEGACION */
+.navbar {
+  display: flex;
+  justify-content: center;
+  padding: 0.25rem 0.5rem; }
+  .navbar li {
+    background-color: #ffddd2;
+    display: inline-block;
+    font-size: 1.375rem;
+    padding: 0.313rem 0.625rem;
+    margin: 0.188rem 0.25rem;
+    border-radius: 0.375rem;
+    text-decoration: none; }
+  .navbar a {
+    text-decoration: none;
+    color: black; }
+    .navbar a:hover {
+      text-decoration: none;
+      color: grey; }
+
+/* CUERPO PAGINA INDEX */
+.parrafo p {
+  display: flex;
+  justify-content: center;
+  font-family: 'Parisienne';
+  font-size: x-large;
+  text-align: center;
+  margin: 1.875rem 6.25rem; }
+
+.imgs {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: baseline; }
+  .imgs img {
+    width: 13.75rem;
+    height: 13.75rem;
+    border-radius: 0.438rem;
+    margin: 2.5rem 0rem; }
+
+body {
+  background-image: url(../imagenes/background.png); }
+
+/* FOOTER */
+footer {
+  position: static;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #ff937a;
+  background-size: cover;
+  height: 6.875rem; }
+  footer .copyright {
+    font-size: 0.813rem;
+    display: inline-block;
+    font-weight: bold;
+    margin: 0rem 0rem 0rem 3.125rem; }
+  footer .arriba {
+    display: inline-block;
+    align-content: end;
+    font-size: 1.125rem;
+    text-decoration: underline;
+    color: black; }
+    footer .arriba a {
+      text-decoration: none;
+      color: black; }
+      footer .arriba a:hover {
+        text-decoration: none;
+        color: grey; }
+  footer .links {
+    display: inline-block;
+    margin: 0rem 3.125rem 0rem 0rem; }
+    footer .links a {
+      margin: 0rem 0.25rem; }
+    footer .links img {
+      width: 2rem; }
+
+.container-fluid {
+  padding: 0%; }
+
+/* HEADER */
+header {
+  background-image: url(../imagenes/header3.svg);
+  height: 11.875rem;
+  background-size: cover;
+  position: sticky;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center; }
+  header * {
+    padding: 0%;
+    margin: 0%;
+    /* font-family: 'Lora', serif;
+        font-family: 'Roboto', sans-serif; */
+    font-family: 'Poppins', sans-serif; }
   header .logo img {
     /* display: inline-block; */
     width: 8.125rem;
@@ -75,7 +202,143 @@ header {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  font-size: 1.5rem;
+  font-size: 1.33rem;
+  font-weight: 700;
+  font-style: italic;
+  margin: 1rem 0rem; }
+
+/* PAGINA PRODUCTOS */
+.mb-3 {
+  margin: 0rem 1rem; }
+
+.gridcontainerproductos {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(8, 1fr);
+  grid-template-areas: "fila 1 fila 1" "fila 2 fila 2" "fila 3 fila 3" "fila 4 fila 4" "fila 5 fila 5" "fila 6 fila 6" "fila 7 fila 7" "fila 8 fila 8";
+  grid-column-gap: 0.125rem;
+  grid-row-gap: 0.125rem;
+  align-items: center;
+  justify-items: center; }
+
+.contenedor {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border-radius: 5%;
+  margin: 0.5rem 0.5rem; }
+
+.Fotoproducto {
+  display: inline-block;
+  /* border-radius: 5%; */
+  width: 12rem;
+  height: 12rem;
+  margin: 0.75rem 0.75rem;
+  transition: 2s; }
+
+.textimg {
+  display: flex;
+  justify-content: center;
+  margin: 0.125rem 0.125rem;
+  font-weight: bolder; }
+
+/* FOOTER */
+footer {
+  position: static;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #ff937a;
+  background-size: cover;
+  height: 6.875rem; }
+  footer .copyright {
+    font-size: 0.813rem;
+    display: inline-block;
+    font-weight: bold;
+    margin: 0rem 0rem 0rem 3.125rem; }
+  footer .arriba {
+    display: inline-block;
+    align-content: end;
+    font-size: 1.125rem;
+    text-decoration: underline;
+    color: black; }
+    footer .arriba a {
+      text-decoration: none;
+      color: black; }
+      footer .arriba a:hover {
+        text-decoration: none;
+        color: grey; }
+  footer .links {
+    display: inline-block;
+    margin: 0rem 3.125rem 0rem 0rem; }
+    footer .links a {
+      margin: 0rem 0.25rem; }
+    footer .links img {
+      width: 2rem; }
+
+.container-fluid {
+  padding: 0%; }
+
+/* HEADER */
+header {
+  background-image: url(../imagenes/header3.svg);
+  height: 11.875rem;
+  background-size: cover;
+  position: sticky;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center; }
+  header * {
+    padding: 0%;
+    margin: 0%;
+    /* font-family: 'Lora', serif;
+        font-family: 'Roboto', sans-serif; */
+    font-family: 'Poppins', sans-serif; }
+  header .logo img {
+    /* display: inline-block; */
+    width: 8.125rem;
+    /* animation-name: logo;
+        animation-duration: 4s;
+        animation-timing-function: ease-in;
+        animation-iteration-count: infinite; */ }
+  header .title1 {
+    font-size: 3.6rem;
+    display: inline-block; }
+  header .title2 {
+    display: inline-block;
+    font-size: 1.6rem;
+    font-style: italic; }
+
+/* NAVEGACION */
+.navbar {
+  display: flex;
+  justify-content: center;
+  padding: 0.25rem 0.5rem; }
+  .navbar li {
+    background-color: #ffddd2;
+    display: inline-block;
+    font-size: 1.375rem;
+    padding: 0.313rem 0.625rem;
+    margin: 0.188rem 0.25rem;
+    border-radius: 0.375rem;
+    text-decoration: none; }
+  .navbar a {
+    text-decoration: none;
+    color: black; }
+    .navbar a:hover {
+      text-decoration: none;
+      color: grey; }
+
+/* ENCABEZADO */
+.productosp {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  font-size: 1.33rem;
   font-weight: 700;
   font-style: italic;
   margin: 1rem 0rem; }
@@ -175,6 +438,12 @@ header {
   flex-direction: row;
   justify-content: space-around;
   align-items: center; }
+  header * {
+    padding: 0%;
+    margin: 0%;
+    /* font-family: 'Lora', serif;
+        font-family: 'Roboto', sans-serif; */
+    font-family: 'Poppins', sans-serif; }
   header .logo img {
     /* display: inline-block; */
     width: 8.125rem;
@@ -210,29 +479,65 @@ header {
       text-decoration: none;
       color: grey; }
 
-/* CUERPO PAGINA INDEX */
-.parrafo p {
+/* ENCABEZADO */
+.productosp {
   display: flex;
-  justify-content: center;
-  font-family: 'Parisienne';
-  font-size: x-large;
-  text-align: center;
-  margin: 1.875rem 6.25rem; }
-
-.imgs {
-  display: flex;
-  flex-wrap: wrap;
   flex-direction: row;
-  justify-content: space-evenly;
-  align-items: baseline; }
-  .imgs img {
-    width: 13.75rem;
-    height: 13.75rem;
-    border-radius: 0.438rem;
-    margin: 2.5rem 0rem; }
+  flex-wrap: wrap;
+  justify-content: center;
+  font-size: 1.33rem;
+  font-weight: 700;
+  font-style: italic;
+  margin: 1rem 0rem; }
 
-body {
-  background-image: url(../imagenes/background.png); }
+/* PAGINA HACE TU PEDIDO  */
+.gridcontainerhtp {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  grid-template-areas: "fila 1 fila 1 fila 1" "fila 2 fila 2 fila 2" "fila 3 fila 3 fila 3" "fila 4 fila 4 fila 4" "fila 5 fila 5 fila 5";
+  grid-column-gap: 0.125rem;
+  grid-row-gap: 0.125rem;
+  align-items: center;
+  justify-items: center; }
+  .gridcontainerhtp .producto {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #d6d6d6;
+    border-radius: 5%;
+    margin: 0.9rem 0.5rem;
+    width: 14.375rem; }
+
+.checkbox {
+  display: inline-block;
+  margin: 0.25rem 0.25rem;
+  justify-items: center;
+  align-items: center;
+  box-shadow: 0rem 0.25rem 0.25rem rgba(0, 0, 0, 0.25); }
+
+.cardshtp,
+.cardsproductos {
+  margin: 1rem 1rem; }
+
+.carrito {
+  background-color: #ffddd2;
+  padding: 0.2rem 0.3rem;
+  display: flex;
+  width: fit-content;
+  flex-direction: row;
+  align-content: center;
+  justify-content: flex-start;
+  border-radius: 3%; }
+  .carrito p {
+    margin: 0rem; }
+
+.confpedido {
+  display: flex;
+  justify-content: flex-end; }
+  .confpedido button {
+    margin: 1.25rem 2.5rem;
+    padding: 0.15rem 0.4rem; }
 
 /* FOOTER */
 footer {
@@ -269,12 +574,175 @@ footer {
     footer .links img {
       width: 2rem; }
 
-* {
-  padding: 0%;
-  margin: 0%;
-  /* font-family: 'Lora', serif;
-    font-family: 'Roboto', sans-serif; */
-  font-family: 'Poppins', sans-serif; }
+.container-fluid {
+  padding: 0%; }
+
+/* HEADER */
+header {
+  background-image: url(../imagenes/header3.svg);
+  height: 11.875rem;
+  background-size: cover;
+  position: sticky;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center; }
+  header * {
+    padding: 0%;
+    margin: 0%;
+    /* font-family: 'Lora', serif;
+        font-family: 'Roboto', sans-serif; */
+    font-family: 'Poppins', sans-serif; }
+  header .logo img {
+    /* display: inline-block; */
+    width: 8.125rem;
+    /* animation-name: logo;
+        animation-duration: 4s;
+        animation-timing-function: ease-in;
+        animation-iteration-count: infinite; */ }
+  header .title1 {
+    font-size: 3.6rem;
+    display: inline-block; }
+  header .title2 {
+    display: inline-block;
+    font-size: 1.6rem;
+    font-style: italic; }
+
+/* NAVEGACION */
+.navbar {
+  display: flex;
+  justify-content: center;
+  padding: 0.25rem 0.5rem; }
+  .navbar li {
+    background-color: #ffddd2;
+    display: inline-block;
+    font-size: 1.375rem;
+    padding: 0.313rem 0.625rem;
+    margin: 0.188rem 0.25rem;
+    border-radius: 0.375rem;
+    text-decoration: none; }
+  .navbar a {
+    text-decoration: none;
+    color: black; }
+    .navbar a:hover {
+      text-decoration: none;
+      color: grey; }
+
+/* ENCABEZADO */
+.productosp {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  font-size: 1.33rem;
+  font-weight: 700;
+  font-style: italic;
+  margin: 1rem 0rem; }
+
+/* PAGINA CONTACTO */
+.mapa {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  margin: 0.5rem; }
+
+.form {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  margin: 1.5rem 0rem; }
+  .form input {
+    display: inline-block;
+    border: solid black 0.125rem;
+    border-radius: 2%;
+    width: 12.5rem;
+    height: 1.875rem;
+    margin: 0.5rem 1rem; }
+
+.comentarios {
+  display: flex;
+  flex-direction: column; }
+
+.texta {
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  .texta textarea {
+    display: flex;
+    border: solid black 0.125rem;
+    width: 25rem;
+    height: 10rem;
+    margin: 1rem; }
+
+.botones {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  margin: 0rem 1.25rem;
+  border-radius: 5% !important; }
+
+.boton__element {
+  border-style: none;
+  background-color: #ffddd2;
+  display: inline-block;
+  font-size: 1rem;
+  width: fit-content;
+  padding: 0.1rem 1rem;
+  margin: 0.188rem 0.25rem;
+  border-radius: 0.375rem;
+  text-decoration: none; }
+  .boton__element:hover {
+    text-decoration: none;
+    color: grey; }
+
+#limpiar {
+  display: inline-block;
+  margin-right: 0rem 0.625rem; }
+
+.bodycontacto {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-around;
+  margin: 2.5rem 0rem; }
+
+/* FOOTER */
+footer {
+  position: static;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #ff937a;
+  background-size: cover;
+  height: 6.875rem; }
+  footer .copyright {
+    font-size: 0.813rem;
+    display: inline-block;
+    font-weight: bold;
+    margin: 0rem 0rem 0rem 3.125rem; }
+  footer .arriba {
+    display: inline-block;
+    align-content: end;
+    font-size: 1.125rem;
+    text-decoration: underline;
+    color: black; }
+    footer .arriba a {
+      text-decoration: none;
+      color: black; }
+      footer .arriba a:hover {
+        text-decoration: none;
+        color: grey; }
+  footer .links {
+    display: inline-block;
+    margin: 0rem 3.125rem 0rem 0rem; }
+    footer .links a {
+      margin: 0rem 0.25rem; }
+    footer .links img {
+      width: 2rem; }
 
 /* TAMAÑO TABLET */
 @media screen and (max-width: 768px) {
