--- a/styles/styles-from-sass.css
+++ b/styles/styles-from-sass.css
@@ -204,6 +204,9 @@ header {
 /* PAGINA PRODUCTOS */
 .mb-3 {
   margin: 0rem 1rem; }
+  .mb-3:hover {
+    transition: 300ms;
+    box-shadow: 0.3rem 0.3rem 0.7rem #00000063; }
 
 .gridcontainerproductos {
   display: grid;
