--- a/scss/_pag-contacto.scss
+++ b/scss/_pag-contacto.scss
@@ -65,7 +65,7 @@ header {
 .botones {
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    align-items: center;
     margin: 0rem 1.25rem;
     border-radius: 5% !important;
 }
