--- a/styles/styles-from-sass.css
+++ b/styles/styles-from-sass.css
@@ -52,8 +52,7 @@ header {
     height: 8.125rem; }
   header .title1 {
     font-size: 3.6rem;
-    display: inline-block;
-    margin: 0%; }
+    display: inline-block; }
   header .title2 {
     display: inline-block;
     font-size: 1.6rem;
@@ -163,8 +162,7 @@ header {
     height: 8.125rem; }
   header .title1 {
     font-size: 3.6rem;
-    display: inline-block;
-    margin: 0%; }
+    display: inline-block; }
   header .title2 {
     display: inline-block;
     font-size: 1.6rem;
@@ -299,8 +297,7 @@ header {
     height: 8.125rem; }
   header .title1 {
     font-size: 3.6rem;
-    display: inline-block;
-    margin: 0%; }
+    display: inline-block; }
   header .title2 {
     display: inline-block;
     font-size: 1.6rem;
@@ -443,8 +440,7 @@ header {
     height: 8.125rem; }
   header .title1 {
     font-size: 3.6rem;
-    display: inline-block;
-    margin: 0%; }
+    display: inline-block; }
   header .title2 {
     display: inline-block;
     font-size: 1.6rem;
@@ -590,8 +586,7 @@ header {
     height: 8.125rem; }
   header .title1 {
     font-size: 3.6rem;
-    display: inline-block;
-    margin: 0%; }
+    display: inline-block; }
   header .title2 {
     display: inline-block;
     font-size: 1.6rem;
@@ -668,7 +663,7 @@ header {
 .botones {
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  align-items: center;
   margin: 0rem 1.25rem;
   border-radius: 5% !important; }
 
@@ -773,7 +768,7 @@ footer {
   .botones {
     display: flex;
     flex-direction: column;
-    align-items: flex-start; }
+    align-items: center; }
     .botones button {
       width: fit-content;
       margin: 0.3rem 0rem; }
@@ -872,14 +867,16 @@ footer {
         margin: 0rem; }
   .title1 {
     font-size: 0rem;
-    display: inline-block; }
+    display: inline-block;
+    margin: -1rem; }
     .title1 p {
       font-size: 2rem;
       display: inline-block;
-      margin: 0rem; }
+      padding: 0rem; }
   .title2 {
     font-size: 0rem;
-    display: inline-block; }
+    display: inline-block;
+    margin: -0.2rem; }
     .title2 p {
       display: inline-block;
       margin: 0rem;
@@ -901,7 +898,7 @@ footer {
     flex-wrap: nowrap;
     justify-content: center;
     align-content: space-evenly;
-    height: 13rem; }
+    height: fit-content; }
   .footer {
     flex-direction: column;
     justify-content: center; }
@@ -926,7 +923,8 @@ footer {
       margin: 0.625rem; }
   .botones {
     flex-direction: column;
-    align-items: center; }
+    align-items: center;
+    justify-content: center; }
     .botones button {
       width: 16.875rem;
       margin: 0.313rem 0rem; }
