--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -28,6 +28,16 @@
 		align-items: stretch;
 	}
 
+	.productosp {
+		display: flex;
+		text-align: center;
+		margin: 0rem 2rem;
+
+		p {
+			margin: 0%;
+		}
+	}
+
 	.header {
 		flex-direction: column;
 		justify-content: center;
@@ -76,7 +86,7 @@
 
 		textarea {
 			width: 17rem;
-			margin: 1rem 1rem;
+			margin: 1rem 0rem;
 		}
 	}
 
@@ -96,39 +106,22 @@
 		display: grid;
 		grid-template-columns: repeat(2, 1fr);
 		grid-template-rows: repeat(8, 1fr);
-		grid-template-areas: 
-		"fila 1 fila 1"
-		"fila 2 fila 2"
-		"fila 3 fila 3"
-		"fila 4 fila 4"
-		"fila 5 fila 5"
-		"fila 6 fila 6"
-		"fila 7 fila 7"
-		"fila 8 fila 8";
 		grid-column-gap: 0.125rem;
 		grid-row-gap: 0.125rem;
 		align-items: center;
 		justify-items: center;
-		margin-bottom: 1rem;
+		margin: 0.2rem 1rem;
 	}
 
 	.gridcontainerhtp {
 		display: grid;
 		grid-template-columns: repeat(2, 1fr);
 		grid-template-rows: repeat(8, 1fr);
-		grid-template-areas: 
-		"fila 1 fila 1"
-		"fila 2 fila 2"
-		"fila 3 fila 3"
-		"fila 4 fila 4"
-		"fila 5 fila 5"
-		"fila 6 fila 6"
-		"fila 7 fila 7"
-		"fila 8 fila 8";
 		grid-column-gap: 0.125rem;
 		grid-row-gap: 0.125rem;
 		align-items: center;
 		justify-items: center;
+		margin: 0.2rem 1rem;
 	}
 
 	.textycorazon {
@@ -161,6 +154,38 @@
 			background-color: map-get($colores, back);
 		}
 	}
+	footer {
+		display: flex;
+		flex-direction: column;
+		height: fit-content;
+
+		.links {
+			margin: 0.625rem 0.625rem;
+
+			img {
+				margin: 0.5rem 0.625rem;
+				width: 1.7rem;
+			}
+		}
+
+		.copyright {
+			font-size: 1rem;
+			padding: 0rem;
+			margin: 0.7rem 0rem;
+
+			p {
+				margin: 0rem;
+			}
+		}
+
+		.arriba {
+			display: inline-block;
+			align-content: center;
+			font-size: 1.1rem;
+			color: black;
+		}
+
+	}
 }
 
 
@@ -174,21 +199,57 @@
 		}
 	}
 
+	.navbar {
+		flex-direction: column;
+		align-items: stretch;
+		margin: 0.5rem 0.5rem;
+	}
+
+	.productosp {
+		display: flex;
+		text-align: center;
+		margin: 0rem 1rem;
+
+		p {
+			margin: 0%;
+		}
+	}
+
 	.textycorazon {
 		margin: 0rem 0rem;
 	}
 
-	.links {
-		margin: 0.625rem 0.625rem;
+	footer {
+		display: flex;
+		flex-direction: column;
+		height: fit-content;
 
-		img {
-			width: 1.25rem;
+		.links {
+			margin: 0.625rem 0.625rem;
+
+			img {
+				margin: 0.5rem 0.625rem;
+				width: 1.7rem;
+			}
 		}
-	}
 
-	.copyright {
-		font-size: 0.625rem;
-		margin: 0rem 0rem 0rem 0.625rem;
+		.copyright {
+			font-size: 1rem;
+			padding: 0rem;
+			margin: 0.7rem 0rem;
+
+			p {
+				margin: 0rem;
+			}
+		}
+
+		.arriba {
+			display: inline-block;
+			align-content: center;
+			font-size: 1.1rem;
+			color: black;
+		}
+
 	}
 
 	.carrito {
@@ -259,16 +320,14 @@
 		}
 	}
 
-	.arriba {
-		display: inline-block;
-		align-content: end;
-		font-size: 0.813rem;
-		color: black;
-	}
-
 	.mapa {
 		display: flex;
-		margin: 0.625rem 0.625rem;
+		iframe {
+			margin: 1rem 1rem;
+			padding: 0%;
+			width: fit-content;
+			height: 22rem;
+		}
 	}
 
 	.parrafo {
@@ -286,20 +345,6 @@
 		height: fit-content;
 	}
 
-	.footer {
-		flex-direction: column;
-		justify-content: center;
-	}
-
-	// .navbar {
-	// 	flex-direction: column;
-	// 	align-items: stretch;
-	// 	li {
-	// 		display: flex;
-	// 		flex-direction: column;
-	// 		justify-content: center;
-	// 	}
-	// }
 	.fa-1x {
 		font-size: 1.5rem;
 	}
@@ -324,9 +369,6 @@
 		color: #004d40;
 	}
 
-	// 
-	// 
-	// 
 	.pespeciales {
 		align-items: center;
 		text-align: center;
@@ -384,15 +426,15 @@
 		display: grid;
 		grid-template-columns: repeat(1, 1fr);
 		grid-template-rows: repeat(16, 1fr);
-		grid-template-areas: 
-		"fila 1 fila 1"
-		"fila 2 fila 2"
-		"fila 3 fila 3"
-		"fila 4 fila 4"
-		"fila 5 fila 5"
-		"fila 6 fila 6"
-		"fila 7 fila 7"
-		"fila 8 fila 8";
+		grid-template-areas:
+			"fila 1 fila 1"
+			"fila 2 fila 2"
+			"fila 3 fila 3"
+			"fila 4 fila 4"
+			"fila 5 fila 5"
+			"fila 6 fila 6"
+			"fila 7 fila 7"
+			"fila 8 fila 8";
 		grid-column-gap: 0.125rem;
 		grid-row-gap: 0.125rem;
 		align-items: stretch;
