--- a/styles/styles-from-sass.css
+++ b/styles/styles-from-sass.css
@@ -730,6 +730,14 @@ footer {
     footer .links img {
       width: 2rem; }
 
+.row > * {
+  flex-shrink: 0;
+  width: 100%;
+  max-width: 100%;
+  padding-right: calc(var(--bs-gutter-x) * .0);
+  padding-left: calc(var(--bs-gutter-x) * .0);
+  margin-top: var(--bs-gutter-y); }
+
 /* TAMAÑO TABLET */
 @media screen and (max-width: 768px) {
   .title1 p {
@@ -748,6 +756,12 @@ footer {
       flex-direction: column;
       justify-content: center;
       align-items: center; }
+  .productosp {
+    display: flex;
+    text-align: center;
+    margin: 0rem 2rem; }
+    .productosp p {
+      margin: 0%; }
   .header {
     flex-direction: column;
     justify-content: center;
@@ -779,7 +793,7 @@ footer {
     margin: 0rem; }
     .texta textarea {
       width: 17rem;
-      margin: 1rem 1rem; }
+      margin: 1rem 0rem; }
   .comentarios {
     margin: 0rem; }
   .imgs {
@@ -790,21 +804,20 @@ footer {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(8, 1fr);
-    grid-template-areas: "fila 1 fila 1" "fila 2 fila 2" "fila 3 fila 3" "fila 4 fila 4" "fila 5 fila 5" "fila 6 fila 6" "fila 7 fila 7" "fila 8 fila 8";
     grid-column-gap: 0.125rem;
     grid-row-gap: 0.125rem;
     align-items: center;
     justify-items: center;
-    margin-bottom: 1rem; }
+    margin: 0.2rem 1rem; }
   .gridcontainerhtp {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(8, 1fr);
-    grid-template-areas: "fila 1 fila 1" "fila 2 fila 2" "fila 3 fila 3" "fila 4 fila 4" "fila 5 fila 5" "fila 6 fila 6" "fila 7 fila 7" "fila 8 fila 8";
     grid-column-gap: 0.125rem;
     grid-row-gap: 0.125rem;
     align-items: center;
-    justify-items: center; }
+    justify-items: center;
+    margin: 0.2rem 1rem; }
   .textycorazon {
     margin: 0rem 0rem; }
   .mainnosotros {
@@ -823,7 +836,27 @@ footer {
       height: 13.75rem;
       padding: 1rem;
       margin: 1rem;
-      background-color: #ff937a; } }
+      background-color: #ff937a; }
+  footer {
+    display: flex;
+    flex-direction: column;
+    height: fit-content; }
+    footer .links {
+      margin: 0.625rem 0.625rem; }
+      footer .links img {
+        margin: 0.5rem 0.625rem;
+        width: 1.7rem; }
+    footer .copyright {
+      font-size: 1rem;
+      padding: 0rem;
+      margin: 0.7rem 0rem; }
+      footer .copyright p {
+        margin: 0rem; }
+    footer .arriba {
+      display: inline-block;
+      align-content: center;
+      font-size: 1.1rem;
+      color: black; } }
 
 /* TAMAÑO CELU */
 @media screen and (max-width: 426px) {
@@ -831,15 +864,38 @@ footer {
     margin: 0.5rem 0rem 0rem 0rem;
     width: 5rem;
     height: 5rem; }
+  .navbar {
+    flex-direction: column;
+    align-items: stretch;
+    margin: 0.5rem 0.5rem; }
+  .productosp {
+    display: flex;
+    text-align: center;
+    margin: 0rem 1rem; }
+    .productosp p {
+      margin: 0%; }
   .textycorazon {
     margin: 0rem 0rem; }
-  .links {
-    margin: 0.625rem 0.625rem; }
-    .links img {
-      width: 1.25rem; }
-  .copyright {
-    font-size: 0.625rem;
-    margin: 0rem 0rem 0rem 0.625rem; }
+  footer {
+    display: flex;
+    flex-direction: column;
+    height: fit-content; }
+    footer .links {
+      margin: 0.625rem 0.625rem; }
+      footer .links img {
+        margin: 0.5rem 0.625rem;
+        width: 1.7rem; }
+    footer .copyright {
+      font-size: 1rem;
+      padding: 0rem;
+      margin: 0.7rem 0rem; }
+      footer .copyright p {
+        margin: 0rem; }
+    footer .arriba {
+      display: inline-block;
+      align-content: center;
+      font-size: 1.1rem;
+      color: black; }
   .carrito {
     margin: 0.188rem 0rem; }
   .Fotoproducto {
@@ -885,14 +941,13 @@ footer {
       margin: 0rem;
       font-size: 1.2rem;
       font-style: italic; }
-  .arriba {
-    display: inline-block;
-    align-content: end;
-    font-size: 0.813rem;
-    color: black; }
   .mapa {
-    display: flex;
-    margin: 0.625rem 0.625rem; }
+    display: flex; }
+    .mapa iframe {
+      margin: 1rem 1rem;
+      padding: 0%;
+      width: fit-content;
+      height: 22rem; }
   .parrafo p {
     margin: 1.25rem 0.938rem;
     font-size: 1.4rem; }
@@ -902,9 +957,6 @@ footer {
     justify-content: center;
     align-content: space-evenly;
     height: fit-content; }
-  .footer {
-    flex-direction: column;
-    justify-content: center; }
   .fa-1x {
     font-size: 1.5rem; }
   .navbar-toggler.toggler-example {
