--- a/scss/_pag-productos.scss
+++ b/scss/_pag-productos.scss
@@ -28,21 +28,12 @@ header {
 
 .gridcontainerproductos {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(8, 1fr);
-    grid-template-areas:
-        "fila 1 fila 1"
-        "fila 2 fila 2"
-        "fila 3 fila 3"
-        "fila 4 fila 4"
-        "fila 5 fila 5"
-        "fila 6 fila 6"
-        "fila 7 fila 7"
-        "fila 8 fila 8";
-    grid-column-gap: 0.125rem;
-    grid-row-gap: 0.125rem;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    gap: 30px;
     align-items: center;
     justify-items: center;
+    margin: 4vh 4vw;
 }
 
 .contenedor {
